--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: 设置Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x' # 指定你想要使用的Python版本
+        python-version: '3.x'
 
     - name: 安装requests
       run: pip install requests
