--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,34 +5,32 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # 确保历史记录和标签都被获取
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: 3.x  # 指定Python版本
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install requests  # 安装requests库
-    - name: Run the script
+        pip install pyinstaller
+    - name: Build EXE with PyInstaller
       run: |
-        cd data  # 切换到data目录
-        python ../../clan.py fm  # 运行脚本，传入参数1138
-    - name: Create ZIP archive
+        pyinstaller --onefile clan2.py
+    - name: Commit and push EXE
       run: |
-        cd data  # 切换到data目录
-        zip -r ../../databak/data.zip ./*  # 将当前目录下的所有文件打包成ZIP文件
-    - name: Save ZIP to GitHub
-      run: |
-        cd ..  # 切换到仓库根目录
-        mkdir -p databak  # 创建databak目录，如果它不存在的话
-        mv data/data.zip databak/  # 将ZIP文件移动到databak目录
-    - name: Commit and push ZIP
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add databak/data.zip  # 添加ZIP文件到暂存区
-        git commit -m "Add ZIP archive"  # 创建提交
+        mkdir exefile  # 创建exefile目录
+        mv dist/clan2.exe exefile/  # 移动EXE文件到exefile目录
+        git config --global user.name "acymz"
+        git config --global user.email "cymz6@hotmail.com"
+        git add exefile/clan2.exe  # 添加EXE文件到暂存区
+        git commit -m "Add built EXE"  # 创建提交
         git push  # 推送到GitHub仓库
+    - name: Upload EXE as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: exefile
+        path: exefile
