--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: 3.x  # 指定Python版本
+        python-version: 3.9  # 指定Python版本
     - name: Install dependencies
       run: |
         pip install pyinstaller
