--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
     - name: 运行v2ray.py
       run: python v2ray.py
 
-    - name: 运行iptv.py
-      run: python iptv.py
+    # - name: 运行iptv.py
+    #   run: python iptv.py
 
     - name: 运行main.py
       run: python main.py
@@ -33,9 +33,9 @@ jobs:
     - name: Run Python Script
       run: python main.py
       
-    - name: 删除临时文件
-      run: |
-        rm list.txt
+    # - name: 删除临时文件
+    #   run: |
+    #     rm list.txt
 
     - name: 提交变更
       run: |
